# center-cluster-esp32-p4

./: CMakeLists.txt  README.md  dbc_to_dash_json.py  dev.sh  sdkconfig  sdkconfig.old
components/TinyGPSPlus-ESPIDF/TinyGPSPlus/src/: TinyGPS++.cpp
components/bsp_extra/: idf_component.yml
docs/: center_cluster_squareline_procedure.md  issue_backlog_tasks.md
docs/skills/cloud-agent-runbook/: SKILL.md
main/: CMakeLists.txt  main.c
main/canbus/: canbus.c  canbus.h  protocol_list.h  protocol_loader.c  protocol_loader.h
main/canbus/protocols/: ecumasters_black.json  haltech.json  hondata.json  link_g4x.json  maxxecu.json
main/gps_wrap/: gps_wrapper.cpp  gps_wrapper.h
main/lap_timer/: lap_timer.c  lap_timer.h
main/odometer/: odometer.c  odometer.h
main/tach_ui/: CMakeLists.txt  ui.c  ui.h  ui_theme.c  ui_theme.h
main/tach_ui/fonts/: ui_font_Doto_48.c
main/tach_ui/screens/: ui_Screen1.c  ui_Screen1.h
skills/cloud-agent-starter/: SKILL.md
tools/ui_preview/: CMakeLists.txt  README.md  generate_gallery.sh  lv_conf.h  lv_conf_preview.h  main_preview.c
tools/ui_preview/output/: index.html
